# md-parser

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python.yml  release.yml  wasm.yml
src/: checklist.rs  document.rs  error.rs  frontmatter.rs  lib.rs  parser.rs  python.rs  section.rs  variables.rs
tests/: integration_tests.rs
tests/fixtures/: bmad_story.md  malformed.md  simple.md  with_checklist.md  with_frontmatter.md  with_variables.md
